Parser.cpp
#include <cwchar>
#include <cwctype>
#include "iostream"
#include "Parser.h"
#include "Scanner.h"

void Parser::SynErr(int n)
{
	if (errDist >= minErrDist)
		errors->SynErr(la->line, la->col, n);
	errDist = 0;
}

void Parser::SemErr(const wchar_t *msg)
{
	if (errDist >= minErrDist)
		errors->Error(t->line, t->col, msg);
	errDist = 0;
}

void Parser::SemErr(const wchar_t *msg1, const wchar_t *msg2)
{
	if (errDist >= minErrDist)
		errors->Error(t->line, t->col, msg1, msg2);
	errDist = 0;
}

void Parser::Warning(const wchar_t *msg) const
{
	errors->Warning(t->line, t->col, msg);
}

void Parser::Warning(const wchar_t *msg1, const wchar_t *msg2) const
{
	errors->Warning(t->line, t->col, msg1, msg2);
}

void Parser::Err(const wchar_t *msg)
{
	errors->Error(t->line, t->col, msg);
}

void Parser::Err(const wchar_t *msg1, const wchar_t *msg2)
{
	errors->Error(t->line, t->col, msg1, msg2);
}

void Parser::Get()
{
	for (;;)
	{
		t = la;
		la = scanner->Scan();
		if (la->kind <= maxT)
		{
			++errDist;
			break;
		}

		if (dummyToken != t)
		{
			dummyToken->kind = t->kind;
			dummyToken->pos = t->pos;
			dummyToken->col = t->col;
			dummyToken->line = t->line;
			dummyToken->next = NULL;
			coco_string_delete(dummyToken->val);
			dummyToken->val = coco_string_create(t->val);
			t = dummyToken;
		}
		la = t;
	}
}

void Parser::Expect(int n)
{
	if (la->kind == n)
		Get();
	else
	{
		SynErr(n);
	}
}

void Parser::ExpectWeak(int n, int follow)
{
	if (la->kind == n)
		Get();
	else
	{
		SynErr(n);
		while (!StartOf(follow))
			Get();
	}
}

bool Parser::WeakSeparator(int n, int syFol, int repFol)
{
	if (la->kind == n)
	{
		Get();
		return true;
	}
	else if (StartOf(repFol))
	{
		return false;
	}
	else
	{
		SynErr(n);
		while (!(StartOf(syFol) || StartOf(repFol) || StartOf(0)))
		{
			Get();
		}
		return StartOf(syFol);
	}
}

void Parser::Qcir_file()
{
	if (la->kind == 3 /* "#QCIR-G14" */)
	{
		Format_id();
	}
	else
	{
		correct_cleansed = false;
		SynErr(3);
	}
	while (!(StartOf(1)))
	{
		SynErr(248);
		Get();
	}
	Qblock_stmt();
	while (!(StartOf(2)))
	{
		SynErr(249);
		Get();
	}
	if (StartOf(3))
	{
		Output_stmt();
	}
	else
	{
		correct_cleansed = false;
		Err(L"output gate definition is missing");
	}
	while (!(la->kind == _EOF || la->kind == _ident || la->kind == _number_ident))
	{
		SynErr(250);
		Get();
	}
	while (la->kind == _ident || la->kind == _number_ident)
	{
		Gate_stmt();
		nl();
		while (!(StartOf(4)))
		{
			SynErr(251);
			Get();
		}
		while (la->kind == 246 /* "\n" */)
		{
			nl();
		}
	}

	n_variables_real = gate_variables.size() + global_variables.size();

	if (output_gate_defined)
	{
		const size_t output_gate_symbol = getSymbol(output_gate);
		if (gate_variables.count(output_gate_symbol) == 0)
		{
			SemErr(output_gate, L"output gate was not defined");
			correct_cleansed = false;
		}
		else if (global_variables.count(output_gate_symbol) > 0)
		{
			SemErr(output_gate, L"is not a gate variable");
			correct_cleansed = false;
		}
		else
		{
			Gate output = gate_variables[output_gate_symbol];
			if (!output.unresolved_variables.empty())
			{
				for (const auto unresolved_variable : output.unresolved_variables)
				{
					for (const auto &pair : symbols)
					{
						if (pair.second == unresolved_variable)
						{
							SemErr(pair.first.data(), L"was unresolved");
							break;
						}
					}
				}
				correct_cleansed = false;
			}
		}
	}
}

void Parser::Format_id()
{
	Expect(3 /* "#QCIR-G14" */);
	if (la->kind == _number_ident)
	{
		Get();
		if (isAllDigits(t->val))
		{
			wchar_t *end;
			n_variables_expected = wcstol(t->val, &end, 10);
			if (n_variables_expected <= 0)
			{
				SemErr(t->val, L"is not a positive number");
				n_variables_expected = -1;
				correct_cleansed = false;
			}
		}
		else
		{
			SemErr(t->val, L"is not a positive number");
			n_variables_expected = -1;
			correct_cleansed = false;
		}
	}
	else if (la->kind == _ident)
	{
		Get();
		if (check_for_cleansed)
		{
			SemErr(L"Number of variables is not defined");
			n_variables_expected = -1;
			correct_cleansed = false;
		}
	}
	else if (check_for_cleansed)
	{
		SemErr(L"Number of variables is not defined");
		n_variables_expected = -1;
		correct_cleansed = false;
	}

	nl();
	while (la->kind == 246 /* "\n" */)
	{
		nl();
	}
}

void Parser::Qblock_stmt()
{
	if (StartOf(5))
	{
		Free();
		Expect(4 /* "(" */);
		Var();
		wchar_t *var = wcsdup(t->val);
		size_t var_symbol = getSymbol(var);
		Warning(var, L"is a free variable");
		if (global_variables.count(var_symbol) == 0)
		{
			global_variables.insert(var_symbol);
		}
		else if (check_for_cleansed)
		{
			SemErr(t->val, L"was already defined");
			correct_cleansed = false;
		}

		while (la->kind == 5 /* "," */)
		{
			Get();
			Var();
			var = wcsdup(t->val);
			size_t var_symbol = getSymbol(var);
			Warning(var, L"is a free variable");
			if (global_variables.count(var_symbol) == 0)
			{
				global_variables.insert(var_symbol);
			}
			else if (check_for_cleansed)
			{
				SemErr(t->val, L"was already defined");
				correct_cleansed = false;
			}
		}
		Expect(6 /* ")" */);
		nl();
		while (la->kind == 246 /* "\n" */)
		{
			nl();
		}
	}
	while (StartOf(6))
	{
		Qblock_quant();
	}
}

void Parser::Output_stmt()
{
	Output();
	Expect(4 /* "(" */);
	Lit();
	output_gate = wcsdup(t->val);
	output_gate_defined = true;
	Expect(6 /* ")" */);
	nl();
	while (la->kind == 246 /* "\n" */)
	{
		nl();
	}
}

void Parser::Gate_stmt()
{
	Var();
	Gate *gate = new Gate();
	const wchar_t *name = wcsdup(t->val);
	size_t name_symbol = getSymbol(name);
	if (global_variables.count(name_symbol) > 0 || gate_variables.count(name_symbol) > 0 || resolved_variables.count(name_symbol) > 0)
	{
		SemErr(name, L"was already defined");
		correct_cleansed = false;
	}

	wchar_t *var;
	size_t var_symbol;
	Expect(7 /* "=" */);
	if (StartOf(7))
	{
		Ngate_type();
		Expect(4 /* "(" */);
		if (la->kind == _ident || la->kind == _number_ident || la->kind == 9 /* "-" */)
		{
			Lit();
			var = wcsdup(t->val);
			var_symbol = getSymbol(var);
			if (gate_variables.count(var_symbol) > 0)
			{
				Gate *gate_var = &gate_variables.at(var_symbol);
				for (const auto &elem : gate_var->unresolved_variables)
				{
					gate->unresolved_variables.insert(elem);
				}
				if (gate_var->type == EXIST_QUANTIFIERS)
				{
					gate_var->type = WAS_USED;
					gate->type = EXIST_QUANTIFIERS;
				}
				else if (gate_var->type == WAS_USED)
				{
					if (check_for_cleansed)
					{
						SemErr(var, L"was already used");
						correct_cleansed = false;
					}
					gate->type = EXIST_QUANTIFIERS;
				}
			}
			else if (global_variables.count(var_symbol) == 0)
			{
				gate->unresolved_variables.insert(var_symbol);
			}
			while (la->kind == 5 /* "," */)
			{
				Get();
				Lit();
				var = wcsdup(t->val);
				var_symbol = getSymbol(var);
				if (gate_variables.count(var_symbol) > 0)
				{
					Gate *gate_var = &gate_variables.at(var_symbol);
					for (const auto &elem : gate_var->unresolved_variables)
					{
						gate->unresolved_variables.insert(elem);
					}
					if (gate_var->type == EXIST_QUANTIFIERS)
					{
						gate_var->type = WAS_USED;
						gate->type = EXIST_QUANTIFIERS;
					}
					else if (gate_var->type == WAS_USED)
					{
						if (check_for_cleansed)
						{
							SemErr(var, L"was already used");
							correct_cleansed = false;
						}
						gate->type = EXIST_QUANTIFIERS;
					}
				}
				else if (global_variables.count(var_symbol) == 0)
				{
					gate->unresolved_variables.insert(var_symbol);
				}
			}
		}
		Expect(6 /* ")" */);
	}
	else if (StartOf(8))
	{
		if (check_for_cleansed)
		{
			Err(L"xor gate is not allowed in cleansed form");
			correct_cleansed = false;
		}
		else
		{
			Warning(L"xor gate is used");
		}
		Xor();
		Expect(4 /* "(" */);
		Lit();
		var = wcsdup(t->val);
		var_symbol = getSymbol(var);
		if (gate_variables.count(var_symbol) > 0)
		{
			Gate *gate_var = &gate_variables.at(var_symbol);
			for (const auto &elem : gate_var->unresolved_variables)
			{
				gate->unresolved_variables.insert(elem);
			}
			if (gate_var->type == EXIST_QUANTIFIERS)
			{
				gate_var->type = WAS_USED;
				gate->type = EXIST_QUANTIFIERS;
			}
			else if (gate_var->type == WAS_USED)
			{
				if (check_for_cleansed)
				{
					SemErr(var, L"was already used");
					correct_cleansed = false;
				}
				gate->type = EXIST_QUANTIFIERS;
			}
		}
		else if (global_variables.count(var_symbol) == 0)
		{
			gate->unresolved_variables.insert(var_symbol);
		}

		Expect(5 /* "," */);
		Lit();
		var = wcsdup(t->val);
		var_symbol = getSymbol(var);
		if (gate_variables.count(var_symbol) > 0)
		{
			Gate *gate_var = &gate_variables.at(var_symbol);
			for (const auto &elem : gate_var->unresolved_variables)
			{
				gate->unresolved_variables.insert(elem);
			}
			if (gate_var->type == EXIST_QUANTIFIERS)
			{
				gate_var->type = WAS_USED;
				gate->type = EXIST_QUANTIFIERS;
			}
			else if (gate_var->type == WAS_USED)
			{
				if (check_for_cleansed)
				{
					SemErr(var, L"was already used");
					correct_cleansed = false;
				}
				gate->type = EXIST_QUANTIFIERS;
			}
		}
		else if (global_variables.count(var_symbol) == 0)
		{
			gate->unresolved_variables.insert(var_symbol);
		}
		Expect(6 /* ")" */);
	}
	else if (StartOf(9))
	{
		if (check_for_cleansed)
		{
			Err(L"ite gate is not allowed in cleansed form");
			correct_cleansed = false;
		}
		else
		{
			Warning(L"ite gate is used");
		}
		Ite();
		Expect(4 /* "(" */);
		Lit();
		var = wcsdup(t->val);
		var_symbol = getSymbol(var);
		if (gate_variables.count(var_symbol) > 0)
		{
			Gate *gate_var = &gate_variables.at(var_symbol);
			for (const auto &elem : gate_var->unresolved_variables)
			{
				gate->unresolved_variables.insert(elem);
			}
			if (gate_var->type == EXIST_QUANTIFIERS)
			{
				gate_var->type = WAS_USED;
				gate->type = EXIST_QUANTIFIERS;
			}
			else if (gate_var->type == WAS_USED)
			{
				if (check_for_cleansed)
				{
					SemErr(var, L"was already used");
					correct_cleansed = false;
				}
				gate->type = EXIST_QUANTIFIERS;
			}
		}
		else if (global_variables.count(var_symbol) == 0)
		{
			gate->unresolved_variables.insert(var_symbol);
		}

		Expect(5 /* "," */);
		Lit();
		var = wcsdup(t->val);
		var_symbol = getSymbol(var);
		if (gate_variables.count(var_symbol) > 0)
		{
			Gate *gate_var = &gate_variables.at(var_symbol);
			for (const auto &elem : gate_var->unresolved_variables)
			{
				gate->unresolved_variables.insert(elem);
			}
			if (gate_var->type == EXIST_QUANTIFIERS)
			{
				gate_var->type = WAS_USED;
				gate->type = EXIST_QUANTIFIERS;
			}
			else if (gate_var->type == WAS_USED)
			{
				if (check_for_cleansed)
				{
					SemErr(var, L"was already used");
					correct_cleansed = false;
				}
				gate->type = EXIST_QUANTIFIERS;
			}
		}
		else if (global_variables.count(var_symbol) == 0)
		{
			gate->unresolved_variables.insert(var_symbol);
		}

		Expect(5 /* "," */);
		Lit();
		var = wcsdup(t->val);
		var_symbol = getSymbol(var);
		if (gate_variables.count(var_symbol) > 0)
		{
			Gate *gate_var = &gate_variables.at(var_symbol);
			for (const auto &elem : gate_var->unresolved_variables)
			{
				gate->unresolved_variables.insert(elem);
			}
			if (gate_var->type == EXIST_QUANTIFIERS)
			{
				gate_var->type = WAS_USED;
				gate->type = EXIST_QUANTIFIERS;
			}
			else if (gate_var->type == WAS_USED)
			{
				if (check_for_cleansed)
				{
					SemErr(var, L"was already used");
					correct_cleansed = false;
				}
				gate->type = EXIST_QUANTIFIERS;
			}
		}
		else if (global_variables.count(var_symbol) == 0)
		{
			gate->unresolved_variables.insert(var_symbol);
		}

		Expect(6 /* ")" */);
	}
	else if (StartOf(6))
	{
		Quant();
		gate->type = EXIST_QUANTIFIERS;

		Expect(4 /* "(" */);
		Var();
		var = wcsdup(t->val);
		var_symbol = getSymbol(var);
		if (gate_variables.count(var_symbol) > 0)
		{
			SemErr(var, L"was already defined as gate variable");
			correct_cleansed = false;
		}
		else if (check_for_cleansed && (global_variables.count(var_symbol) > 0 || resolved_variables.count(var_symbol) > 0))
		{
			SemErr(var, L"was already defined");
			correct_cleansed = false;
		}
		resolved_variables.insert(var_symbol);

		while (la->kind == 5 /* "," */)
		{
			Get();
			Var();
			var = wcsdup(t->val);
			var_symbol = getSymbol(var);
			if (gate_variables.count(var_symbol) > 0)
			{
				SemErr(var, L"was already defined as gate variable");
				correct_cleansed = false;
			}
			else if (check_for_cleansed && (resolved_variables.count(var_symbol) > 0 || global_variables.count(var_symbol) > 0))
			{
				SemErr(var, L"was already defined");
				correct_cleansed = false;
			}
			resolved_variables.insert(var_symbol);
		}
		Expect(8 /* ";" */);
		Lit();
		var = wcsdup(t->val);
		var_symbol = getSymbol(var);
		if (gate_variables.count(var_symbol) > 0)
		{
			Gate *gate_var = &gate_variables.at(var_symbol);
			if (check_for_cleansed && gate_var->type == WAS_USED)
			{
				SemErr(var, L"was already used");
				correct_cleansed = false;
			}
			gate_var->type = WAS_USED;
			for (const auto &elem : gate_var->unresolved_variables)
			{
				gate->unresolved_variables.insert(elem);
			}
		}
		else if (resolved_variables.count(var_symbol) == 0 && global_variables.count(var_symbol) == 0)
		{
			gate->unresolved_variables.insert(var_symbol);
		}
		Expect(6 /* ")" */);
	}
	else
		SynErr(252);

	gate_variables[name_symbol] = *gate;
}

void Parser::nl()
{
	Expect(246 /* "\n" */);
}

void Parser::Free()
{
	if (la->kind == 102 /* "free" */)
	{
		Get();
	}
	else if (la->kind >= 103 && la->kind <= 117)
	{
		Get();
		if (check_for_cleansed)
		{
			SemErr(L"free keyword is not in lower case");
			correct_cleansed = false;
		}
	}
	else
		SynErr(253);
}

void Parser::Var()
{
	if (la->kind == _ident)
	{
		Get();
	}
	else if (la->kind == _number_ident)
	{
		Get();
	}
	else
		SynErr(254);

	if (check_for_cleansed)
	{
		if (!isAllDigits(t->val))
		{
			SemErr(t->val, L"is not a correct variable name");
			correct_cleansed = false;
		}
		else if (n_variables_expected > 0)
		{
			wchar_t *end;
			long number = wcstol(t->val, &end, 10);
			if (number <= 0 || number > n_variables_expected)
			{
				SemErr(t->val, L"is not in the range of variables");
				correct_cleansed = false;
			}
		}
	}
}

void Parser::Qblock_quant()
{
	Quant();
	Expect(4 /* "(" */);
	Var();
	wchar_t *var = wcsdup(t->val);
	size_t var_symbol = getSymbol(var);
	if (check_for_cleansed)
	{
		if (global_variables.count(var_symbol) > 0)
		{
			SemErr(t->val, L" was already defined");
			correct_cleansed = false;
		}
	}
	global_variables.insert(var_symbol);
	while (la->kind == 5 /* "," */)
	{
		Get();
		Var();
		var = wcsdup(t->val);
		var_symbol = getSymbol(var);
		if (check_for_cleansed)
		{
			if (global_variables.count(var_symbol) > 0)
			{
				SemErr(t->val, L" was already defined");
				correct_cleansed = false;
			}
		}
		global_variables.insert(var_symbol);
	}
	Expect(6 /* ")" */);

	nl();
	while (!(StartOf(10)))
	{
		SynErr(255);
		Get();
	}
	while (la->kind == 246 /* "\n" */)
	{
		nl();
	}
}

void Parser::Quant()
{
	if (StartOf(11))
	{
		Exists();
	}
	else if (StartOf(12))
	{
		Forall();
	}
	else
		SynErr(256);
}

void Parser::Output()
{
	if (la->kind == 38 /* "output" */)
	{
		Get();
	}
	else if (la->kind >= 39 && la->kind <= 101)
	{
		Get();
		if (check_for_cleansed)
		{
			SemErr(L"output keyword is not in lower case");
			correct_cleansed = false;
		}
	}
	else
		SynErr(257);
}

void Parser::Lit()
{
	if (la->kind == _ident || la->kind == _number_ident)
	{
		Var();
	}
	else if (la->kind == 9 /* "-" */)
	{
		Get();
		Var();
	}
	else
		SynErr(258);
}

void Parser::Ngate_type()
{
	if (StartOf(13))
	{
		And();
	}
	else if (StartOf(14))
	{
		Or();
	}
	else
		SynErr(259);
}

void Parser::Xor()
{
	if (la->kind == 10 /* "xor" */)
	{
		Get();
	}
	else if (la->kind >= 11 && la->kind <= 17)
	{
		Get();
		if (check_for_cleansed)
		{
			SemErr(L"xor keyword is not in lower case");
			correct_cleansed = false;
		}
	}
	else
		SynErr(260);
}

void Parser::Ite()
{
	if (la->kind == 18 /* "ite" */)
	{
		Get();
	}
	else if (la->kind >= 19 && la->kind <= 25)
	{
		Get();
		if (check_for_cleansed)
		{
			SemErr(L"ite keyword is not in lower case");
			correct_cleansed = false;
		}
	}
	else
		SynErr(261);
}

void Parser::Exists()
{
	if (la->kind == 118 /* exists */)
	{
		Get();
	}
	else if (la->kind >= 119 && la->kind <= 181)
	{
		Get();
		if (check_for_cleansed)
		{
			SemErr(L"exists keyword is not in lower case");
			correct_cleansed = false;
		}
	}
	else
		SynErr(262);
}

void Parser::Forall()
{
	if (la->kind == 182 /* "forall" */)
	{
		Get();
	}
	else if (la->kind >= 183 && la->kind <= 245)
	{
		Get();
		if (check_for_cleansed)
		{
			SemErr(L"forall keyword is not in lower case");
			correct_cleansed = false;
		}
	}
	else
		SynErr(263);
}

void Parser::And()
{
	if (la->kind == 26 /* "and" */)
	{
		Get();
	}
	else if (la->kind >= 27 && la->kind <= 33)
	{
		Get();
		if (check_for_cleansed)
		{
			SemErr(L"and keyword is not in lower case");
			correct_cleansed = false;
		}
	}
	else
		SynErr(264);
}

void Parser::Or()
{
	if (la->kind == 34 /* "or" */)
	{
		Get();
	}
	else if (la->kind >= 35 && la->kind <= 37)
	{
		Get();
		if (check_for_cleansed)
		{
			SemErr(L"or keyword is not in lower case");
			correct_cleansed = false;
		}
	}
	else
		SynErr(265);
}

bool Parser::isAllDigits(const wchar_t *arr) const
{
	while (*arr != L'\0')
	{
		if (!iswdigit(*arr))
		{
			return false;
		}
		arr++;
	}
	return true;
}

size_t Parser::getSymbol(const wchar_t *str)
{
	const auto it = this->symbols.find(str);
	if (it == this->symbols.end()) {
		size_t symbol = this->symbols_size++;
		symbols[str] = symbol;
		return symbol;
	}
	else
	{
		return it->second;
	}
}

// If the user declared a method Init and a mehtod Destroy they should
// be called in the contructur and the destructor respctively.
//
// The following templates are used to recognize if the user declared
// the methods Init and Destroy.

template <typename T>
struct ParserInitExistsRecognizer
{
	template <typename U, void (U::*)() = &U::Init>
	struct ExistsIfInitIsDefinedMarker
	{
	};

	struct InitIsMissingType
	{
		char dummy1;
	};

	struct InitExistsType
	{
		char dummy1;
		char dummy2;
	};

	// exists always
	template <typename U>
	static InitIsMissingType is_here(...);

	// exist only if ExistsIfInitIsDefinedMarker is defined
	template <typename U>
	static InitExistsType is_here(ExistsIfInitIsDefinedMarker<U> *);

	enum
	{
		InitExists = (sizeof(is_here<T>(NULL)) == sizeof(InitExistsType))
	};
};

template <typename T>
struct ParserDestroyExistsRecognizer
{
	template <typename U, void (U::*)() = &U::Destroy>
	struct ExistsIfDestroyIsDefinedMarker
	{
	};

	struct DestroyIsMissingType
	{
		char dummy1;
	};

	struct DestroyExistsType
	{
		char dummy1;
		char dummy2;
	};

	// exists always
	template <typename U>
	static DestroyIsMissingType is_here(...);

	// exist only if ExistsIfDestroyIsDefinedMarker is defined
	template <typename U>
	static DestroyExistsType is_here(ExistsIfDestroyIsDefinedMarker<U> *);

	enum
	{
		DestroyExists = (sizeof(is_here<T>(NULL)) == sizeof(DestroyExistsType))
	};
};

// The folloing templates are used to call the Init and Destroy methods if they exist.

// Generic case of the ParserInitCaller, gets used if the Init method is missing
template <typename T, bool = ParserInitExistsRecognizer<T>::InitExists>
struct ParserInitCaller
{
	static void CallInit(T *t)
	{
		// nothing to do
	}
};

// True case of the ParserInitCaller, gets used if the Init method exists
template <typename T>
struct ParserInitCaller<T, true>
{
	static void CallInit(T *t)
	{
		t->Init();
	}
};

// Generic case of the ParserDestroyCaller, gets used if the Destroy method is missing
template <typename T, bool = ParserDestroyExistsRecognizer<T>::DestroyExists>
struct ParserDestroyCaller
{
	static void CallDestroy(T *t)
	{
		// nothing to do
	}
};

// True case of the ParserDestroyCaller, gets used if the Destroy method exists
template <typename T>
struct ParserDestroyCaller<T, true>
{
	static void CallDestroy(T *t)
	{
		t->Destroy();
	}
};

void Parser::Parse()
{
	t = NULL;
	la = dummyToken = new Token();
	la->val = coco_string_create(L"Dummy Token");
	Get();
	Qcir_file();
	Expect(0);
}

Parser::Parser(Scanner *scanner, bool check_for_cleansed)
{
	maxT = 247;

	ParserInitCaller<Parser>::CallInit(this);
	dummyToken = NULL;
	t = la = NULL;
	minErrDist = 2;
	errDist = minErrDist;
	this->scanner = scanner;
	this->check_for_cleansed = check_for_cleansed;
	this->output_gate = L"undefined";
	this->output_gate_defined = false;
	this->symbols = ankerl::unordered_dense::map<std::basic_string_view<wchar_t>, size_t>();
	this->symbols_size = 0;
	this->gate_variables = ankerl::unordered_dense::map<size_t, Gate>();
	this->global_variables = ankerl::unordered_dense::set<size_t>();
	this->resolved_variables = ankerl::unordered_dense::set<size_t>();
	errors = new Errors();
}

bool Parser::StartOf(int s) const
{
	const bool T = true;
	const bool x = false;
